--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
@@ -23,15 +30,17 @@
         src="./images/image-qr-code.png"
         id="qr-code"
       />
-      <h1 id="qr-heading">
-        Improve your front-end skills by building projects
-      </h1>
-      <p id="qr-body-text">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
+      <div id="qr-text">
+        <h1 id="qr-heading">
+          Improve your front-end skills by building projects
+        </h1>
+        <p id="qr-body-text">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
     </div>
-    <footer class="attribution">
+    <footer id="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
