--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         </p>
       </div>
     </div>
-    <footer id="attribution">
+    <aside id="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Liz Kaufman</a>.
-    </footer>
+    </aside>
   </body>
 </html>
