--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Liz Kaufman</a>.
+      >. Coded by <a href="https://github.com/lizkaufman">Liz Kaufman</a>.
     </aside>
   </body>
 </html>
