--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div id="qr-container">
+    <main id="qr-container">
       <img
         alt="qr code for front end mentor site"
         src="./images/image-qr-code.png"
@@ -39,12 +39,12 @@
           to the next level
         </p>
       </div>
-    </div>
-    <aside id="attribution">
+    </main>
+    <footer id="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/lizkaufman">Liz Kaufman</a>.
-    </aside>
+    </footer>
   </body>
 </html>
